# temp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  pre-commit
src/: CMakeLists.txt  protocols.h
src/earth/: CMakeLists.txt  earth.cpp  earth.h  main.cpp
src/error_correction/: CMakeLists.txt  error_correction.cpp  error_correction.h
src/health/: CMakeLists.txt  health.cpp  health.h  main.cpp
src/rover/: CMakeLists.txt  main.cpp  rover.cpp  rover.h
src/terrain_gen/: CMakeLists.txt  main.cpp  terrain_gen.cpp  terrain_gen.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h
test/: CMakeLists.txt
test/error_correction/: CMakeLists.txt  error_correction_test.cpp
